feat: Configure Netlify Forms

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ passionate about crafting seamless user experiences I thrive at the intersection
             <p>Have a project in mind or just want to chat? <b>Let's connect!</b></p>
         </div>
         <div class="contact-form">
-            <form>
+            <form id="contact-form" name="contact" data-netlify="true">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" placeholder="Your Name">
